# dig-l1-wallet

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: publish.yml
src/: lib.rs  wallet.rs
src/coins/: mod.rs  selection.rs  tracker.rs
src/keys/: derivation.rs  mod.rs
src/keystore/: encryption.rs  mnemonic.rs  mod.rs
src/storage/: format.rs  mod.rs
src/transaction/: cat.rs  mod.rs
src/types/: config.rs  error.rs  mod.rs  response.rs
src/wallet/: mod.rs
tests/: integration.rs  keystore.rs  transaction.rs
