[package]
name = "dig-l1-wallet"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DIG-Network/dig-l1-wallet"
description = "Self-custodial Chia L1 wallet crate with XCH and CAT support"
keywords = ["chia", "wallet", "blockchain", "cat", "l1"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
chia-query = { path = "../chia-query" }
chia = "0.26"
chia-wallet-sdk = { version = "0.30", features = ["native-tls"] }
chia-puzzle-types = "0.26"
chia-puzzles = "0.20"
clvmr = "0.14"
clvm-traits = "0.26"
clvm-utils = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = "2.0"
rand = "0.8"
hex = "0.4"
log = "0.4"
sha2 = "0.10"
dirs = "6"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
lto = true
strip = "symbols"
